# School-Database

./: .gitignore  CMakeLists.txt  Course.cpp  Course.hpp  JSONBackend.cpp  JSONBackend.hpp  LICENSE  Person.cpp  Person.hpp  README.md  SchoolDB.cpp  SchoolDB.hpp  Student.cpp  Student.hpp  Teacher.cpp  Teacher.hpp  database.cpp  details.json  jsonTester.cpp  main.cpp  school_db.json  vcpkg.json
